Fix alertas sonar - Se creo un parametrized test en controller para unificar todos los test de 400 que son productos de validar el formato de los datos entrantes - Se remplazaron los datos de las lambda en searchTest para guardarlos en variables previamente, para evitar multiples llamadas - Se simplifico el collector en repository adapter - Se quito el public de varias clases de test ya que no es necesario